Bug 226537 - hovering doesn't show sub-tags
Summary: hovering doesn't show sub-tags
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Engine (other bugs)
Version First Reported In: 1.2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-12 14:00 UTC by terri.bugs
Modified: 2012-06-27 10:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description terri.bugs 2010-02-12 14:00:39 UTC
Version:           digikam 1.2 (svn 1086154) (using KDE 4.3.2)
OS:                Linux
Installed from:    Ubuntu Packages

If when moving a tag by drag & drop in the left sidepanel "Caption/Tags" mouse pointer at some point crosses over the My Tags window boundary, then hovering over a tag with sub-tags won't expand or collapse the tag hierarchy below the mouse pointer.
Comment 1 terri.bugs 2010-02-18 17:57:33 UTC
This works in svn 1092129. So marking bug as fixed.