Auto-expand trees for external drags as well. When hovering a drag, items were auto-expanded only when dragging from within the view. We need to set the DraggingState in dragEnterEvent when we accept the event. QAbstractItemView does this, but we reimplement.

BUG: 226537

svn path=/trunk/extragear/graphics/digikam/; revision=1089312